# rdigest

./: .gitignore  CHANGELOG.md  Makefile  index-template.html  rdigest.cabal  readme.md  template.html
.github/workflows/: haskell.yml  release.yml
app/: CLI.hs  DB.hs  Main.hs  Server.hs  Types.hs  Utils.hs
migrations/: 001_init.sql  002_update_columns.sql  003_add_digest.sql  004_add_column_website_url.sql  1.sql
scripts/: build_linux.sh  build_macos.sh
ui/: elm.json  package.json
ui/public/: elm.js  index.html  style.css  styles.css
ui/src/: Main.elm  style.css
