cabal-version:      3.0
name:               rdigest
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Chandru
maintainer:         chandru89new@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-doc-files: CHANGELOG.md, template.html

common warnings
    ghc-options: -Wal

build-type:         Simpl

executable rdigest
    import:           warnings
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:  FetchChannelsList,
    --                 GenerateRssList

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:      base,
                        -- scalpel >= 0.6.1,
                        async,
                        tagsoup,
                        text,
                        http-conduit,
                        bytestring,
                        sqlite-simple,
                        transformers,
                        resource-pool,
                        network-uri,
                        time,
                        file-embed,
                        deepseq
    hs-source-dirs:   app
    default-language: Haskell2010
    -- ghc-options: -rtsopts=none -threaded -split-sections -Wall -Wincomplete-patterns
    ghc-options: -Wall -Wincomplete-patterns
