cabal-version:      3.0
name:               rdigest
version:            0.4.2

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Chandru
maintainer:         chandru89new@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-doc-files:    CHANGELOG.md,
                    migrations/*.sql,
                    ui/public/index.html,
                    ui/public/*.js,
                    ui/public/*.css

common warnings
    ghc-options: -Wall

build-type:         Simple

executable rdigest
    import:           warnings
    main-is:          Main.hs

    other-modules:     Paths_rdigest, Server, Types, Utils, DB, CLI
    -- other-extensions:
    build-depends:      base,
                        deepseq,
                        tagsoup,
                        text,
                        http-conduit,
                        bytestring,
                        sqlite-simple,
                        transformers,
                        resource-pool,
                        network-uri,
                        time,
                        file-embed,
                        case-insensitive,
                        directory,
                        aeson,
                        scotty,
                        http-types,
                        containers,
                        async,
                        xml-conduit,
                        unliftio
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -Wall -Wincomplete-patterns -threaded "-with-rtsopts=-N"
